API: Added method to retrieve sample records by TAXON_ID by exact search
